bring back transition on a click, circular buttons, 10 results, 11 tags

--- a/client/home.jade
+++ b/client/home.jade
@@ -94,7 +94,7 @@ template(name='home')
                 //     i.chat.icon            
                         
                 if skv_is 'view_layout' 'grid'
-                    .ui.stackable.four.cards.scrolling
+                    .ui.stackable.three.cards.scrolling
                         each posts
                             +post_card
                 else 
