--- a/client/post_card.jade
+++ b/client/post_card.jade
@@ -2,26 +2,27 @@ template(name='post_card')
     .card.smallscroll(class=nightmode_class)
         if embed
             // span.f11.full
-            a.view_post.invert(href="/p/#{_id}" class=post_header_class)
-                |!{embed}
-        if is_image
             a.view_post(href="/p/#{_id}" class=post_header_class)
-                img.ui.fluid.zoomer.rounded.image.toggle_view(src=data.url)
+                |!{embed}
+        else if is_image
+            a.view_post(href="/p/#{_id}" class=post_header_class)
+                img.ui.fluid.zoomer.image.toggle_view(src=data.url)
         else if data.is_reddit_media_domain
             a.view_post(href="/p/#{_id}" class=post_header_class)
-                img.ui.fluid.rounded.image.pointer.zoomer(src=data.thumbnail)
-                // img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
+                img.ui.fluid.image.pointer.zoomer(src=data.thumbnail)
+                // img.ui.centered.image.pointer.call_visual(src=data.url)
         else if has_thumbnail
             a.view_post(href="/p/#{_id}" class=post_header_class)
-                img.ui.fluid.rounded.image.pointer.zoomer(src=data.thumbnail)
+                img.ui.fluid.image.pointer.zoomer(src=data.thumbnail)
         else if watson.metadata.image
-            img.ui.rounded.image.pointer.call_meta(src=watson.metadata.image)
+            img.ui.image.pointer.call_meta(src=watson.metadata.image)
         else if is_youtube
             // .ui.fluid.embed
             //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
             iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-            div
-        if data.link_url
+        else if preview_path
+            img(src=preview_path)
+        else if data.link_url
             img.ui.image.pointer.call_visual(src=data.link_url)
 
         // if image_link
