--- a/client/client.jade
+++ b/client/client.jade
@@ -15,9 +15,6 @@ head
     link(rel="manifest" href="/site.webmanifest")
     script(src='https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js')
 
-    // link(href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css" rel="stylesheet")
-    // script(src="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/suneditor.min.js")
-    // script(src="https://cdn.jsdelivr.net/npm/suneditor@latest/src/lang/en.js")
 
     // script(src="https://cdn.jsdelivr.net/npm/sweetalert2@9")
 
@@ -33,7 +30,7 @@ head
 
 
 template(name='layout')
-    .global_container
+    .global_container(class=nightmode_colum_class)
         +yield
 
             
@@ -48,7 +45,7 @@ template(name='not_found')
                         
 
 template(name='search_shortcut')
-    i.big.circular.link.icon.search_tag(class=icon title=tag)
+    i.big.link.icon.search_tag.zoomer(class=icon title=tag)
 
 
            
