--- a/client/home.jade
+++ b/client/home.jade
@@ -1,6 +1,6 @@
 template(name='home')
     .ui.padded.stackable.grid
-        .sixteen.wide.column(class=nightmode_colum_class)
+        .sixteen.wide.column
             // i.plus.link.icon.add
             if picked_tags
                 if skv_is 'nightmode' true
@@ -30,9 +30,36 @@ template(name='home')
                     +search_shortcut tag='cat' icon='cat'
                     +search_shortcut tag='science' icon='flask'
                     +search_shortcut tag='video' icon='video'
+                    +search_shortcut tag='gaming' icon='gamepad'
+                    +search_shortcut tag='pics' icon='images'
                     +search_shortcut tag='medicine' icon='pills'
+                    +search_shortcut tag='chess' icon='chess'
+                    +search_shortcut tag='food' icon='food'
+                    +search_shortcut tag='beer' icon='beer'
+                    +search_shortcut tag='hotel' icon='bed'
+                    +search_shortcut tag='winter' icon='snowflake'
+                    +search_shortcut tag='photography' icon='camera'
                     +search_shortcut tag='dog' icon='dog'
                     +search_shortcut tag='covid' icon='radiation'
+                    +search_shortcut tag='cheese' icon='cheese'
+                    +search_shortcut tag='solar' icon='sun'
+                    +search_shortcut tag='women' icon='venus'
+                    +search_shortcut tag='men' icon='mars'
+                    +search_shortcut tag='dungeons & dragons' icon='dice d20'
+                    +search_shortcut tag='physics' icon='atom'
+                    +search_shortcut tag='law' icon='balance scale'
+                    +search_shortcut tag='books' icon='book'
+                    +search_shortcut tag='biking' icon='biking'
+                    +search_shortcut tag='news' icon='newspaper'
+                    +search_shortcut tag='music' icon='music'
+                    +search_shortcut tag='skiing' icon='skiing'
+                    +search_shortcut tag='pizza' icon='pizza slice'
+                    +search_shortcut tag='fish' icon='fish'
+                    +search_shortcut tag='gardening' icon='seedling'
+                    +search_shortcut tag='bible' icon='bible'
+                    +search_shortcut tag='daoism' icon='yin yang'
+                    +search_shortcut tag='car' icon='car'
+                    +search_shortcut tag='tarot' icon='moon'
             if picked_tags
                 // if many_tags
                 //     a#clear_tags.ui.red.invert.icon.button.pick_term
@@ -94,9 +121,23 @@ template(name='home')
                 //     i.chat.icon            
                         
                 if skv_is 'view_layout' 'grid'
-                    .ui.stackable.three.cards.scrolling
-                        each posts
-                            +post_card
+                    if one_post
+                        .ui.stackable.one.cards.scrolling
+                            each posts
+                                +post_card
+                            
+                    else if two_posts
+                        .ui.stackable.two.cards.scrolling
+                            each posts
+                                +post_card
+                    else if three_posts
+                        .ui.stackable.three.cards.scrolling
+                            each posts
+                                +post_card
+                    else
+                        .ui.stackable.four.cards.scrolling
+                            each posts
+                                +post_card
                 else 
                     .ui.divided.link.items
                         each posts
