working tone download and display

--- a/client/home.jade
+++ b/client/home.jade
@@ -117,10 +117,16 @@ template(name='home')
                     i.picture.icon
                 .ui.icon.button.view_adult(class=adult_class)
                     i.fire.icon
-                .ui.icon.button.view_joy(class=joy_class)
-                    i.smile.green.icon
-                .ui.icon.button.view_anger(class=joy_class)
-                    i.smile.red.icon
+                .ui.icon.basic.compact.button.view_joy(class=joy_class)
+                    i.smile.green.large.outline.icon
+                .ui.icon.basic.compact.button.view_anger(class=anger_class)
+                    i.frown.red.large.outline.icon
+                .ui.icon.basic.compact.button.view_fear(class=fear_class)
+                    i.black.frown.large.outline.icon
+                .ui.icon.basic.compact.button.view_disgust(class=disgust_class)
+                    i.orange.frown.large.outline.icon
+                .ui.icon.basic.compact.button.view_sadness(class=sadness_class)
+                    i.blue.frown.large.outline.icon
                 // .ui.icon.button.view_commented
                 //     i.chat.icon            
                         
