fix flat_tag route to home with double tag add to array, make full card smallscroll, init limist buttons

--- a/client/card.jade
+++ b/client/card.jade
@@ -34,7 +34,7 @@ template(name='post_card')
         // if youtube_id
         //     +youtube_view key='youtube_id' label='youtube id'
 
-        .content.smallscroll
+        .content
             a.ui.small.header(href="/p/#{_id}") #{title}
             div
             // if data.selftext_html
