--- a/client/home.jade
+++ b/client/home.jade
@@ -127,6 +127,14 @@ template(name='home')
                     i.orange.frown.large.outline.icon
                 .ui.icon.basic.compact.button.view_sadness(class=sadness_class)
                     i.blue.frown.large.outline.icon
+                .ui.icon.basic.compact.button.limit_1(class=sadness_class)
+                    |1
+                .ui.icon.basic.compact.button.limit_5(class=sadness_class)
+                    |5
+                .ui.icon.basic.compact.button.limit_10(class=sadness_class)
+                    |10
+                .ui.icon.basic.compact.button.limit_20(class=sadness_class)
+                    |20
                 // .ui.icon.button.view_commented
                 //     i.chat.icon            
                         
