--- a/client/style.css
+++ b/client/style.css
@@ -384,7 +384,7 @@ html.ios body {
 
 .card {
     /* background: black !important; */
-    border-radius: 7px !important; 
+    /*border-radius: 7px !important; */
 }
 
 a.goto_article {
