add points and comment count to card, first fivve item menu on post_view with main, emotion, cleaned, tone, and future comments

--- a/client/card.jade
+++ b/client/card.jade
@@ -64,6 +64,11 @@ template(name='post_card')
             |{{ufrom data.created}}
             if watson
                 +doc_emotion_small
+            i.thumbs.up.outline.grey.zoomer.link.icon.upvote
+            |#{points}
+            i.thumbs.down.outline.grey.zoomer.link.icon.downvote
+            i.chat.outline.grey.icon
+            |#{comment_count}
             // +voting
             // if in_dev
             //     i.large.lock.link.grey.icon.make_private
