--- a/client/style.css
+++ b/client/style.css
@@ -474,8 +474,8 @@ img:active {
 }
 .zoomer:hover {
     transition: all .25s ease !important; 
-    text-shadow: 0 0 3px grey !important;
-    /*filter: drop-shadow(0px 0px 3px white);    */
+    /*text-shadow: 0 0 3px grey !important;*/
+    filter: drop-shadow(0px 0px 4px grey);    
     z-index: 1000 !important;
     /*animation: fadein .225s !important;*/
     transform: scale(1.1) !important;
