sort by created on home and slight view interface tweaks

--- a/client/home.jade
+++ b/client/home.jade
@@ -84,7 +84,7 @@ template(name='home')
                 else
                     .ui.icon.basic.button.sort_up
                         i.caret.up.icon
-                .ui.large.icon.button.sort_timestamp(class=sort_timestamp_class)
+                .ui.large.icon.button.sort_created(class=sort_created_class)
                     i.clock.icon
                 .ui.large.icon.button.sort_points(class=sort_points_class)
                     i.thumbs.up.icon
