--- a/client/view.jade
+++ b/client/view.jade
@@ -74,10 +74,16 @@ template(name='post_view')
                         //         a(href="https://redgifs.com/watch/tidyalivecopperhead")
                         //             |via RedGIFs    
                     if skv_is 'post_view_mode' 'comments'
-                        .ui.button.get_comments
-                            |get
+                        .ui.horizontal.divider.get_post_comments
+                            i.grey.comment.outline.icon
+                            |#{rcomments.count} comments
+                        // .ui.items
+                        each rcomment_tags
+                            .ui.compact.button #{name}
+                                small #{count}
+                        .spacer
                         each rcomments
-                            .ui.header #{body}, #{_timestamp}
+                            +rcomment
                 .four.wide.column.scrollin
                     if watson.metadata.image
                         img.ui.rounded.image.pointer.call_meta(src=watson.metadata.image)
@@ -115,3 +121,58 @@ template(name='post_view')
                     +call_watson mode='reddit'
                     +call_watson mode='url'
    
+
+
+
+                
+                
+
+template(name='rcomment')                
+    .ui.grid.call_watson_comment
+        .sixteen.wide.column
+            .ui.small.inline.header {{data.score}}
+            a.author.say(href="/user/#{data.author}") #{data.author}
+            span.metadata 
+                span.date {{ufrom data.created}}
+                +doc_emotion_small
+            .pointer.say(class=post_header_class)
+                |{{#markdown}} {{data.body}} {{/markdown}}
+            .actions
+                each tags 
+                    +flat_tag_picker
+                    // .ui.tiny.basic.label #/{this}
+        if data.replies.data.children
+            .ui.grid
+                each data.replies.data.children
+                    .one.wide.column
+                    .fifteen.wide.column
+                        a.author(href="/user/#{data.author}") #{data.author}
+                        .pointer.content.say
+                            |{{#markdown}} {{data.body}} {{/markdown}}
+                            // .text.say #{data.score} #{data.body}
+            // if in_dev
+            //     +print_this
+                
+                
+                
+template(name='post_related')
+    .ui.header related
+    .ui.list
+        each related_posts
+            a.item.say.pointer.zoomer(href="/r/#{subreddit}/p/#{_id}" class=post_header_class) 
+                if data.is_reddit_media_domain
+                    a.view_post(href="/r/#{subreddit}/p/#{_id}" class=post_header_class)
+                        img.ui.small.rounded.image.toggle_view(src=data.url)
+                else if watson.metadata.image
+                    a.view_post(href="/r/#{subreddit}/p/#{_id}" class=post_header_class)
+                        img.ui.rounded.small.inline.image.toggle_view(src=watson.metadata.image)
+                else if data.thumbnail
+                    a.view_post(href="/r/#{subreddit}/p/#{_id}" class=post_header_class)
+                        img.ui.rounded.small.inline.image(src=data.thumbnail)    
+            
+                .ui.inline.small.header !{data.title} #{data.link_title}
+                .ui.basic.label #{data.ups}
+                .ui.label #{subreddit}
+                each tags
+                    .ui.mini.basic.label #{this}        
+                    
